--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "news-homepage",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://saroshfarhan.github.io/news-homepage/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +20,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^5.0.0",
     "vite": "^4.0.0"
   }
 }
